# reflex-react-example

./: .eslintignore  next.config.js  package-lock.json  package.json  run-example  shell.nix
app/: layout.tsx  page.tsx
components/: Reflex.tsx  SimpleProps.tsx  SimpleState.tsx  Test.tsx
components/haskell/: cabal.project  default.nix  haskell-components.cabal
components/haskell/dep/jsaddle/: github.json
components/haskell/dep/react/: git.json  github.json
components/haskell/dep/reflex-react/: git.json  github.json
components/haskell/src-exe/: Main.hs
components/haskell/src/Example/: SimpleProps.hs  SimpleState.hs
dep/nixpkgs/: github.json
