cabal-version:      3.0
name:               haskell-components
version:            0.1.0.0
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
category:           Web
build-type:         Simple

common warnings
  ghc-options: -Wall -Wunused-packages

executable reflex-react
  import:           warnings
  main-is:          Main.hs
  other-modules:
    Example.SimpleProps
    Example.SimpleState

  build-depends:
      base
    , containers
    , ghc-prim
    , jsaddle
    , mtl
    , react
    , reflex
    , reflex-dom-core
    , reflex-react
    , text
    , transformers
  hs-source-dirs:
    src
    src-exe

  default-language: Haskell2010
  ghc-options: -threaded -with-rtsopts=-N10
